syntax = "proto3";

package personal.cluster_management;

option java_multiple_files = true;
option java_package = "personal.cluster_management.proto";
option java_outer_classname = "DistributedJobProto";

// ==========================================================
// 1. Client-to-Server Requests
// ==========================================================

// Message representing a request to execute a job on a remote node.
message JobRequest {
  // A unique identifier for this job, generated by the client or manager.
  string job_id = 1; 

  // The full command line string to execute.
  // Example: "python main.py train --graph_size 50..."
  string command = 2;

  // The file system path to the repository containing the code to execute.
  string repository_path = 3;

  // The name of the tmux session to use or create for running this command.
  // If this field is empty, the command is executed directly without tmux.
  string tmux_session_name = 4; 
}

// Dedicated request to establish (create) a new tmux session.
message TmuxCreateRequest {
  // A unique identifier for this session. The server will use this name.
  string session_name = 1;
  
  // Optional: The initial command to run in the new session.
  // If empty, the session is created but left idle.
  string initial_command = 2; 
}

// Dedicated request to kill (destroy) an existing tmux session.
message TmuxKillRequest {
  // The unique name of the tmux session to kill.
  string session_name = 1;
  
  // Optional: If provided, this is the job_id associated with the session being killed.
  string job_id = 2; 
}